# anf-generator

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
anf_generator/: CoherenceMatrix.py  MixingMatrix.py  __init__.py
docs/: conf.py  index.rst  refs.bib  requirements.txt
tests/: example.py  example_babble.py  test_generate_signals.py
