[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "anf-generator"
dynamic = ["version"]
description = "Generating coherence-constrained multisensor signals."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Emanuel Habets", email = "emanuel.habets@audiolabs-erlangen.de" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.6",
    "scipy>=0.13.0",
]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[project.urls]
Homepage = "https://github.com/audiolabs/anf-generator"
Issues = "https://github.com/audiolabs/anf-generator/issues"
